--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="user_fullname">Cat Damon Pawclaw</string>
+    <string name="user_jobtitle">Senior Software Engineer</string>
 </resources>
