--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="action_settings">Settings</string>
     <string name="user_fullname">Cat Damon Pawclaw</string>
     <string name="user_jobtitle">Senior Software Engineer</string>
+    <string name="title_activity_maps">Jhobber Map</string>
 </resources>
