--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
     <string name="app_name">Jhobber</string>
+    <string name="app_subname">Tinder For Jobs</string>
+    <string name="app_author">Yorman Arias</string>
+    <string name="app_website">www.cixtor.com</string>
+    <string name="app_sponsor">Sponsor — CICCC</string>
+    <string name="app_copyright">Copyright © - 2018</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
