--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Jhobber</string>
     <string name="app_subname">Tinder For Jobs</string>
@@ -5,10 +6,8 @@
     <string name="app_website">www.cixtor.com</string>
     <string name="app_sponsor">Sponsor — CICCC</string>
     <string name="app_copyright">Copyright © - 2018</string>
-
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
     <string name="action_settings">Settings</string>
     <string name="user_fullname">Cat Damon Pawclaw</string>
     <string name="user_jobtitle">Senior Software Engineer</string>
