--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="drawer_settings">Settings</string>
     <string name="drawer_about">About</string>
     <string name="signup_username">LinkedIn username</string>
-    <string name="signup_separator">OR</string>
+    <string name="signup_footer">NO PASSWORD LOGIN</string>
     <string name="signup_firstname">Firstname</string>
     <string name="signup_lastname">Lastname</string>
     <string name="signup_occupation">Occupation</string>
